--- a/pre-entrega-1-backend-II/src/views/realTimeProducts.handlebars
+++ b/pre-entrega-1-backend-II/src/views/realTimeProducts.handlebars
@@ -1,8 +1,6 @@
 <div class="container">
   <h1>Productos en Tiempo Real</h1>
-  <div class="products-container">
-    <ul id="products-list"></ul>
-  </div>
+  <div class="productos-container" id="products-list"></div>
 
   <h2>Agregar Producto</h2>
   <form id="product-form" class="product-form">
